--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ dask==1.0.0
 decorator==4.3.0
 deepdiff==4.0.9
 docutils==0.14
-git+https://github.com/deepmind/dm_control.git@dce5ff23f48c53c5016d087c2bfc8fd65ac88a49
+# git+https://github.com/deepmind/dm_control.git@dce5ff23f48c53c5016d087c2bfc8fd65ac88a49
 enum34==1.1.6
 flatbuffers==1.10
 flatten-dict==0.0.3.post1
@@ -48,9 +48,9 @@ Keras-Preprocessing==1.0.5
 kiwisolver==1.0.1
 lockfile==0.12.2
 Markdown==3.0.1
-matplotlib==3.1.2
+matplotlib==3.0.3
 more-itertools==4.3.0
-mujoco-py==2.0.2.8
+mujoco-py==2.0.2.5
 git+https://github.com/vitchyr/multiworld.git@d76b3dae2e8cbca02924f93d6cc0239c552f6408
 networkx==2.2
 numpy==1.17.3
@@ -78,8 +78,8 @@ PyWavelets==1.0.1
 PyYAML==5.1
 ray[rllib,debug]==0.7.6
 redis==3.3.8
-requests==2.20.1
-robosuite==0.1.0
+# requests==2.20.1
+# robosuite==0.1.0
 rsa==3.4.2
 ruamel-yaml==0.15.46
 s3transfer==0.2.0
