--- a/requirements.txt
+++ b/requirements.txt
@@ -81,7 +81,7 @@ redis==3.3.8
 # requests==2.20.1
 # robosuite==0.1.0
 rsa==3.4.2
-ruamel-yaml==0.15.46
+#ruamel-yaml==0.15.46
 s3transfer==0.2.0
 scikit-image==0.14.2
 scikit-video==1.1.11
